# MatchMaker

./: CMakeLists.txt  README.md
include/: defer.h  exception.h  main_mediator.h  mainwindow.h
include/app/: app.h  console_player_observer.h  console_user_rating_observer.h  games.h  mediator.h  user_descriptor.h
include/core/: cv_waiter.h  exception.h  executable_game.h  executable_game_info.h  game.h  game_factory.h  game_instance.h  game_registry.h  main_activity.h  match.h  match_arranger.h  match_engine.h  match_mediator.h  performer.h  player.h  rating_map.h  resource_manager.h  serialization.h  timeline.h  timeline_bound.h  timeline_object.h  timing.h  user.h  user_info.h  user_observers.h  user_rating_observer.h  user_registry.h  waiter.h
include/gui/: add_user_dialog.h  dashboard.h  dashboard_model.h  mainwindow.h  menubar.h  user_comparisons.h  user_descriptor.h  user_list.h  user_list_delegate.h  user_list_filter.h  user_list_model.h  user_property.h
include/misc/: printing.h  prng.h  subprocess.h  subprocess_observer.h  subprocess_reaper.h
src/: CMakeLists.txt  main.cpp  main_mediator.cpp  mainwindow.cpp
src/app/: CMakeLists.txt  app.cpp  console_player_observer.cpp  console_user_rating_observer.cpp  mediator.cpp
src/core/: CMakeLists.txt  cv_waiter.cpp  executable_game.cpp  game_registry.cpp  main_activity.cpp  match.cpp  match_arranger.cpp  match_engine.cpp  match_mediator.cpp  player.cpp  rating_map.cpp  resource_manager.cpp  serialization.cpp  timeline.cpp  timeline_bound.cpp  timeline_object.cpp  user.cpp  user_observers.cpp  user_registry.cpp  waiter.cpp
src/games/: CMakeLists.txt  rock_paper_scissors.cpp  seed.h  tic_tac_toe.cpp
src/gui/: CMakeLists.txt  add_user_dialog.cpp  dashboard.cpp  dashboard_model.cpp  main_window.cpp  mainwindow.cpp  menubar.cpp  user_list.cpp  user_list_delegate.cpp  user_list_filter.cpp  user_list_model.cpp
src/misc/: CMakeLists.txt  subprocess.cpp  subprocess_reaper.cpp
test/: CMakeLists.txt  test_config.cpp
test/core/: match_arranger.cpp  player.cpp  timeline.cpp
test/include/: test_config.h
test/include/mock/core/: game.h  performer.h  player_endpoint.h  waiter.h
